--- a/pom.xml
+++ b/pom.xml
@@ -100,7 +100,7 @@
         <build-helper-maven-plugin.version>3.2.0</build-helper-maven-plugin.version>
         <flatten-maven-plugin.version>1.2.5</flatten-maven-plugin.version>
         <gmavenplus-plugin.version>1.10.0</gmavenplus-plugin.version>
-        <groovy.version>2.5.12</groovy.version>
+        <groovy.version>2.5.13</groovy.version>
         <jacoco-maven-plugin.version>0.8.5</jacoco-maven-plugin.version>
         <java.version>1.8</java.version>
         <maven-antrun-plugin.version>1.8</maven-antrun-plugin.version>
@@ -141,8 +141,10 @@
         <dependencies>
             <dependency>
                 <groupId>org.codehaus.groovy</groupId>
-                <artifactId>groovy</artifactId>
+                <artifactId>groovy-bom</artifactId>
                 <version>${groovy.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
             </dependency>
         </dependencies>
     </dependencyManagement>
