--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <artifactId>thymeleaf-layout-dialect-build</artifactId>
     <version>${revision}</version>
     <packaging>pom</packaging>
-    <url>${project.url}</url>
+    <url>${project-url}</url>
     <inceptionYear>2016</inceptionYear>
 
     <licenses>
@@ -69,12 +69,12 @@
         <connection>scm:git:git@github.com:zhanhb/thymeleaf-layout-dialect.git</connection>
         <developerConnection>scm:git:git@github.com:zhanhb/thymeleaf-layout-dialect.git</developerConnection>
         <tag>HEAD</tag>
-        <url>${project.url}</url>
+        <url>${project-url}</url>
     </scm>
 
     <issueManagement>
         <system>Github</system>
-        <url>${project.url}/issues</url>
+        <url>${project-url}/issues</url>
     </issueManagement>
 
     <ciManagement>
@@ -130,8 +130,8 @@
         <osgi.import>*</osgi.import>
         <osgi.private />
         <osgi.symbolicName>${project.groupId}.${project.artifactId}</osgi.symbolicName>
+        <project-url>https://github.com/zhanhb/thymeleaf-layout-dialect</project-url>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.url>https://github.com/zhanhb/thymeleaf-layout-dialect</project.url>
         <retrolambda-maven-plugin.version>2.5.7</retrolambda-maven-plugin.version>
         <revision>2.5.2.BUILD-SNAPSHOT</revision>
         <sortpom-maven-plugin.version>2.12.0</sortpom-maven-plugin.version>
@@ -230,7 +230,7 @@
                             <Private-Package>${osgi.private}</Private-Package>
                             <Import-Package>${osgi.import}</Import-Package>
                             <DynamicImport-Package>${osgi.dynamicImport}</DynamicImport-Package>
-                            <Bundle-DocURL>${project.url}</Bundle-DocURL>
+                            <Bundle-DocURL>${project-url}</Bundle-DocURL>
                         </instructions>
                     </configuration>
                 </plugin>
@@ -435,7 +435,7 @@
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-project-info-reports-plugin</artifactId>
                         <configuration>
-                            <webAccessUrl>${project.url}/tree/${project.scm.tag}</webAccessUrl>
+                            <webAccessUrl>${project-url}/tree/${project.scm.tag}</webAccessUrl>
                         </configuration>
                     </plugin>
                 </plugins>
