--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,3 @@
 # Auto detect text files and perform LF normalization
 # disable auto normalization of platform line ending.
-# * text=auto
-* text eol=lf
+* text=auto
