--- a/pom.xml
+++ b/pom.xml
@@ -135,6 +135,7 @@
         <retrolambda-maven-plugin.version>2.5.7</retrolambda-maven-plugin.version>
         <revision>2.5.3.BUILD-SNAPSHOT</revision>
         <sortpom-maven-plugin.version>2.12.0</sortpom-maven-plugin.version>
+        <thymeleaf.version>3.0.12.RELEASE</thymeleaf.version>
         <versions-maven-plugin.version>2.8.1</versions-maven-plugin.version>
     </properties>
 
@@ -146,6 +147,11 @@
                 <version>${groovy.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.thymeleaf</groupId>
+                <artifactId>thymeleaf</artifactId>
+                <version>${thymeleaf.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
